# rhea

./: .eslintignore  .eslintrc.cjs  .gitignore  .gitmodules  .prettierignore  .prettierrc  README.md  cdsdb.code-workspace  make-sql-schema-files.sh  package-lock.json  package.json  rhea.code-workspace  svelte.config.js  tailwind.config.cjs  tsconfig.json  vite.config.ts
src/: app.d.ts  app.html
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json  main.json
src-tauri/sidecar/: mafft-x86_64-unknown-linux-gnu
src-tauri/src/: lib.rs  main.rs
src/lib/: index.ts  obj.ts  types.ts
src/lib/api/: darkmode.ts  drag-drop.ts  file-drag-drop.ts  file-type.ts  lifecycle.ts  scale.ts
src/lib/api/db/: index.ts
src/lib/api/db/collections/: index.ts
src/lib/api/db/gbseq/: collections.ts  fts.ts  index.ts  insert.ts  select.ts
src/lib/api/db/schema/: collections.sql  collections.ts  seqrecs.sql  seqrecs.ts  sequences.sql  sequences.ts  taxonomy.sql  taxonomy.ts
src/lib/api/db/seqrecs/: collections.ts  delete.ts  fts.ts  index.ts  insert.ts  select.ts
src/lib/api/db/summaries/: index.ts  insert.ts
src/lib/api/drag-drop/: drag-drop-basic.ts  drag-drop-files.ts
src/lib/app/api/: clipboard.ts  darkmode.ts  download.ts  drag-and-drop.ts  drag-drop-file.ts  drag-drop.ts  file-drag-drop.ts  file-type.ts  filedrop.ts  index.ts  lifecycle.ts  scale.ts  types.ts
src/lib/app/db/: index.ts  types.ts
src/lib/app/main/: main-collections.svelte  main-doc-list.svelte  main-doc-table.svelte  main-layout.svelte  main-nav.svelte  main.svelte
src/lib/app/stores/: cache-dtd.ts  dtd.ts  settings.ts
src/lib/app/svelte-stores/: cache-dtd.ts  context-menu.ts  databases.ts  db-main.ts  settings.ts  state.ts  subheader.ts
src/lib/app/ui/: index.ts
src/lib/backend/: clipboard.ts  dark-mode.ts  download.ts  file-type.ts  fs.ts  index.ts  lifecycle.ts  menu.ts  scale.ts  system-info.ts
src/lib/backend/drag-drop/: drag-drop-basic.ts  drag-drop-files.ts  index.ts
src/lib/backend/mafft/: index.ts
src/lib/doc/: doc-list-main.ts  doc-list-srch.ts  doc-list.ts  index.ts
src/lib/models/: index.ts  record-list.ts
src/lib/models/doc/: doc-list-main.ts  doc-list-srch.ts  doc-list.ts
src/lib/ncbi/: eutils-params.ts  eutils.ts  index.ts  utils.ts
src/lib/ncbi/types/: GBSet.ts  TaxaSet.ts  gbseq.ts  taxon.ts
src/lib/seq/: aln.ts  fasta.ts  genome.ts  index.ts  iupac.ts  seq-list.ts  seq-record.ts  seq.ts
src/lib/seq/aln/: index.ts
src/lib/seq/types/: index.ts
src/lib/stores/: databases.ts  dtd-cache.ts  search-store.ts  settings.ts  state.ts  status.ts  types.ts
src/lib/svelte-stores/: cache-dtd.ts  context-menu.ts  databases.ts  settings.ts  state.ts  status.ts
src/lib/ui/: FileDrop.svelte  GridResizers.svelte  ResizableCols.svelte  StatusBar.svelte  index.ts
src/lib/ui/components/: Button.svelte  CheckBox.svelte  ContextMenu.svelte  NumberInput.svelte  Radio.svelte  RangeInput.svelte  TextInput.svelte
src/lib/ui/form-elements/: Button.svelte  CheckBox.svelte  index.ts
src/lib/ui/layout/: Footer.svelte  Header.svelte  Main.svelte
src/lib/ui/resizable-grid/: ResizableGrid.svelte  index.ts
src/lib/ui/seq-view/: SeqView.svelte  index.ts  seq-view-controller.ts
src/lib/ui/styles/: app.scss  base.scss  colors.scss  defs.scss  fieldset.scss  layout.scss  nav-debug.scss  nav-main.scss  reset.scss  scrollbars.scss  status-bar.scss  tab-nav.scss  table.scss  toolbar.scss  treeview.scss
src/lib/ui/tab-nav/: Tab.svelte  TabNav.svelte  TabSpacer.svelte
src/lib/ui/table-view/: TableView.svelte  index.ts
src/lib/ui/tree-view/: NodeView.svelte  TreeView.svelte  index.ts
src/lib/ui/utils/: GridSizers.svelte
src/lib/ui/views/: ResizableGrid.svelte
src/lib/utils/: all-win-events.ts  build-tree.ts  date.ts  events.ts  index.ts  misc.ts  object-transformers.ts  record-list.ts  scale.ts  types.ts
src/lib/xml/: index.ts
src/lib/xml/dtd/: index.ts  types.ts  utils.ts
src/lib/xmlnew/dtd/: dtd-attlist.ts  dtd-common.ts  dtd-element.ts  dtd-entity.ts  index.ts  utils.ts  xml-doctype.ts
src/rhea/: main-collections.svelte  main-doc-table.svelte  main-layout.svelte  main-menu.ts  main-nav.svelte  main.svelte
src/rhea/main-filter-search/: filter-search.svelte  filter.svelte  search-doc-table.svelte  search.svelte
src/routes/: +layout.svelte  +layout.ts  +page.svelte  NavMain.svelte  ResizableGrid.svelte  filter.svelte  nav.svelte  search.svelte
src/routes/collections/: +page.svelte
src/routes/debug/: +layout.svelte  +page.svelte  TableDTDs.svelte  TableGBSeqs.svelte  TableSeqSum.svelte  TableSeqSum1.svelte  TableSeqSum2.svelte  TableTaxSumm.svelte  nav.svelte  tables.svelte
src/routes/debug/testing/: ResizableGrid.svelte  tables.svelte
src/routes/grid/: +page.svelte  ResizableGrid.svelte
src/routes/home-prev/: filter.svelte  search.svelte
src/routes/search/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/view/[recid]/: +error.svelte  +page.svelte  +page.ts  SeqView.svelte
src/styles/: app.scss  base.scss  classes.scss  debug.scss  defs.scss  layout.scss  nav-debug.scss  reset.scss  status-bar.scss  table.scss
src/styles/colors/1/: 04-violet.scss  13-yellow.scss  53-zinc.scss  54-gray.scss
src/styles/colors/2/: 02-fuchsia.scss  05-indigo.scss  13-yellow.scss  16-red.scss  51-stone.scss  54-gray.scss  55-slate.scss
src/styles/colors/3/: 02-fuchsia.scss  03-purple.scss  04-violet.scss  05-indigo.scss  07-sky.scss  09-teal.scss  10-emerald.scss  13-yellow.scss  14-amber.scss  52-neutral.scss  53-zinc.scss
tests/xmlnew/: playground.ts
tests/xmlnew/data/: NCBI_GBSeq.xml  esummary_nuccore.dtd  esummary_nuccore.xml
(+174 files in other folders)
