[package]
name = "cdsdb_app_binary"
version = "0.1.0"
description = "CDSDB Description in Cargo.toml"
authors = ["Karolis Ramanauskas"]
license = "GNU General Public License v3.0"
repository = "https://github.com/karolisr/cdsdb"
default-run = "cdsdb_app_binary"
edition = "2021"
rust-version = "1.76"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.0-beta.19", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "2.0.0-beta.24", features = ["devtools"] }

tauri-plugin-clipboard-manager = "2.1.0-beta.6"
tauri-plugin-fs = "2.0.0-beta.11"
tauri-plugin-http = "2.0.0-beta.12"
tauri-plugin-os = "2.0.0-beta.8"
tauri-plugin-shell = "2.0.0-beta.9"

[dependencies.tauri-plugin-sql]
features = ["sqlite"]
version = "2.0.0-beta.9"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
