[package]
name = "rhea"
version = "0.0.1"
description = "Rhea description in cargo.toml"
authors = ["Karolis Ramanauskas"]
license = "GNU General Public License v3.0"
repository = "https://github.com/karolisr/rhea"
default-run = "rhea"
edition = "2021"
rust-version = "1.76"

[lib]
name = "rhea_lib"
crate-type = ["staticlib", "cdylib", "lib"]

# See more keys and their definitions at:
#   https://doc.rust-lang.org/cargo/reference/manifest.html

# Code generation options
#   https://doc.rust-lang.org/rustc/codegen-options/index.html

[profile.dev]
incremental = true # Compile your binary in smaller steps.
codegen-units = 8  # Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
lto = false        # Enables link-time-optimizations. Use false for faster compile time.
opt-level = 3      # "s" prioritizes small binary size. Use 3 for faster compile time.
panic = "abort"    # Higher performance by disabling panic handlers.
strip = false      # Ensures debug symbols are removed.

[profile.release]
incremental = true # Compile your binary in smaller steps.
codegen-units = 4  # Allows LLVM to perform better optimization. 1-256; 1=slow compile time; 256=faster compile time.
lto = false        # Enables link-time-optimizations. Use false for faster compile time.
opt-level = 3      # "s" prioritizes small binary size. Use 3 for faster compile time.
panic = "abort"    # Higher performance by disabling panic handlers.
strip = true       # Ensures debug symbols are removed.

[dependencies.tauri]
version = "2.0.0-rc.6"
features = ["devtools"]

[build-dependencies.tauri-build]
version = "2.0.0-rc.6"
features = []

[dependencies.tauri-plugin-clipboard-manager]
version = "2.1.0-beta.7"

[dependencies.tauri-plugin-http]
version = "2.0.0-rc.0"

[dependencies.tauri-plugin-fs]
version = "2.0.0-rc.0"

[dependencies.tauri-plugin-os]
version = "2.0.0-rc.0"

[dependencies.tauri-plugin-shell]
version = "2.0.0-rc.2"

[dependencies.tauri-plugin-sql]
version = "2.0.0-rc.0"
features = ["sqlite"]

[dependencies.serde]
version = "1.0.208"
features = ["derive"]

[dependencies.serde_json]
version = "1.0.125"
